Fix bug 692377: Incorrect rendering of blending groups.

A combination of constant alpha and non-zero blending modes resulted
in incorrect rendering.

Various fixes seem to have made it work:

 * Allow for non-full alpha when blending non-isolated groups back.

 * Clamp blended pixels to allow for overflow.

 * Allow for alpha in the shape blending.